crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__inverse__decode_failure.snap
---
source: crates/nash-codegen/src/optimizer_tests/inverse.rs
expression: "format!(\"{}\\n--- isolated pass\\n{}\", fixture.code_snapshot(),\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), left.uplc, pretty(after), right.uplc, right.result,\nright.logs))"
---
--- unoptimized Core
unIData (iData (unIData 1))
--- unoptimized UPLC
(program 1.1.0
  [(builtin unIData) [(builtin iData) [(builtin unIData) (con integer 1)]]])
--- optimized Core
let anf#1 : int = unIData 1 in
let anf#2 : Data = iData anf#1 in
anf#1
--- optimized UPLC
(program 1.1.0
  [(lam anf_3 [(lam anf_4 anf_3) [(builtin iData) anf_3]])
    [(builtin unIData) (con integer 1)]])
--- isolated pass
--- core before
unIData (iData (unIData 1))
--- uplc before
(program 1.1.0
  [(builtin unIData) [(builtin iData) [(builtin unIData) (con integer 1)]]])
--- core after
unIData 1
--- uplc after
(program 1.1.0 [(builtin unIData) (con integer 1)])
--- result
error: Runtime(NotData(Integer(1)))
--- logs
[]
