crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__inverse__decoded.snap
---
source: crates/nash-codegen/src/optimizer_tests/inverse.rs
expression: "format!(\"{}\\n--- isolated pass\\n{}\", fixture.code_snapshot(),\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), left.uplc, pretty(after), right.uplc, right.result,\nright.logs))"
---
--- unoptimized Core
unIData (iData (unIData (con data (I 42))))
--- unoptimized UPLC
(program 1.1.0
  [(builtin unIData) [(builtin iData) [(builtin unIData) (con data (I 42))]]])
--- optimized Core
let anf#2 : Data = iData 42 in
42
--- optimized UPLC
(program 1.1.0
  [(lam anf_1 (con integer 42)) [(builtin iData) (con integer 42)]])
--- isolated pass
--- core before
unIData (iData (unIData (con data (I 42))))
--- uplc before
(program 1.1.0
  [(builtin unIData) [(builtin iData) [(builtin unIData) (con data (I 42))]]])
--- core after
unIData (con data (I 42))
--- uplc after
(program 1.1.0 [(builtin unIData) (con data (I 42))])
--- result
(con integer 42)
--- logs
[]
