crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__inverse__forged_metadata.snap
---
source: crates/nash-codegen/src/optimizer_tests/inverse.rs
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), left.uplc, pretty(after), right.uplc, right.result,\nright.logs))"
---
--- unoptimized Core
unIData (iData true)
--- unoptimized UPLC
(program 1.1.0 [(builtin unIData) [(builtin iData) (con bool True)]])
--- optimized Core
let anf#1 : Data = iData true in
unIData anf#1
--- optimized UPLC
(program 1.1.0
  [(lam anf_2 [(builtin unIData) anf_2]) [(builtin iData) (con bool True)]])
--- isolated pass
--- core before
unIData (iData true)
--- uplc before
(program 1.1.0 [(builtin unIData) [(builtin iData) (con bool True)]])
--- core after
unIData (iData true)
--- uplc after
(program 1.1.0 [(builtin unIData) [(builtin iData) (con bool True)]])
--- result
error: Runtime(TypeMismatch(Integer, Boolean(true)))
--- logs
[]
