crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__inverse__representation_bytes_bound_invalid.snap
---
source: crates/nash-codegen/src/optimizer_tests/inverse.rs
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), left.uplc, pretty(after), right.uplc, right.result,\nright.logs))"
---
--- unoptimized Core
let x#5 : bytes = trace "operand" in false in
let encoded#6 : Data = bData x#5 in
trace "must not run" in unBData encoded#6
--- unoptimized UPLC
(program 1.1.0
  [(lam x_5
    [(lam encoded_6
      (force
        [[(force (builtin trace)) (con string "must not run")]
          (delay [(builtin unBData) encoded_6])]))
      [(builtin bData) x_5]])
    (force
      [[(force (builtin trace)) (con string "operand")] (delay (con bool False))])])
--- optimized Core
let x#1 : bytes = trace "operand" in false in
let encoded#2 : Data = bData x#1 in
trace "must not run" in unBData encoded#2
--- optimized UPLC
(program 1.1.0
  [(lam builtin_5
    [(lam x_3
      [(lam encoded_4
        (force
          [[builtin_5 (con string "must not run")] (delay [(builtin unBData) encoded_4])]))
        [(builtin bData) x_3]])
      (force [[builtin_5 (con string "operand")] (delay (con bool False))])])
    (force (builtin trace))])
--- isolated pass
--- core before
let x#5 : bytes = trace "operand" in false in
let encoded#6 : Data = bData x#5 in
trace "must not run" in unBData encoded#6
--- uplc before
(program 1.1.0
  [(lam x_5
    [(lam encoded_6
      (force
        [[(force (builtin trace)) (con string "must not run")]
          (delay [(builtin unBData) encoded_6])]))
      [(builtin bData) x_5]])
    (force
      [[(force (builtin trace)) (con string "operand")] (delay (con bool False))])])
--- core after
let x#5 : bytes = trace "operand" in false in
let encoded#6 : Data = bData x#5 in
trace "must not run" in unBData encoded#6
--- uplc after
(program 1.1.0
  [(lam x_5
    [(lam encoded_6
      (force
        [[(force (builtin trace)) (con string "must not run")]
          (delay [(builtin unBData) encoded_6])]))
      [(builtin bData) x_5]])
    (force
      [[(force (builtin trace)) (con string "operand")] (delay (con bool False))])])
--- result
error: Runtime(TypeMismatch(ByteString, Boolean(false)))
--- logs
["operand"]
