crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__inverse__representation_bytes_captured.snap
---
source: crates/nash-codegen/src/optimizer_tests/inverse.rs
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), left.uplc, pretty(after), right.uplc, right.result,\nright.logs))"
---
--- unoptimized Core
let x#5 : bytes = trace "once" in (con bytestring #68656c6c6f) in
let encoded#6 : Data = bData x#5 in
let alias#7 : Data = encoded#6 in
force (delay (unBData alias#7))
--- unoptimized UPLC
(program 1.1.0
  [(lam x_5
    [(lam encoded_6
      [(lam alias_7 (force (delay [(builtin unBData) alias_7]))) encoded_6])
      [(builtin bData) x_5]])
    (force
      [[(force (builtin trace)) (con string "once")]
        (delay (con bytestring #68656c6c6f))])])
--- optimized Core
let x#1 : bytes = trace "once" in (con bytestring #68656c6c6f) in
let encoded#2 : Data = bData x#1 in
x#1
--- optimized UPLC
(program 1.1.0
  [(lam builtin_5
    [(lam x_3 [(lam encoded_4 x_3) [(builtin bData) x_3]])
      (force [[builtin_5 (con string "once")] (delay (con bytestring #68656c6c6f))])])
    (force (builtin trace))])
--- isolated pass
--- core before
let x#5 : bytes = trace "once" in (con bytestring #68656c6c6f) in
let encoded#6 : Data = bData x#5 in
let alias#7 : Data = encoded#6 in
force (delay (unBData alias#7))
--- uplc before
(program 1.1.0
  [(lam x_5
    [(lam encoded_6
      [(lam alias_7 (force (delay [(builtin unBData) alias_7]))) encoded_6])
      [(builtin bData) x_5]])
    (force
      [[(force (builtin trace)) (con string "once")]
        (delay (con bytestring #68656c6c6f))])])
--- core after
let x#5 : bytes = trace "once" in (con bytestring #68656c6c6f) in
let encoded#6 : Data = bData x#5 in
let alias#7 : Data = encoded#6 in
force (delay x#5)
--- uplc after
(program 1.1.0
  [(lam x_5
    [(lam encoded_6 [(lam alias_7 (force (delay x_5))) encoded_6])
      [(builtin bData) x_5]])
    (force
      [[(force (builtin trace)) (con string "once")]
        (delay (con bytestring #68656c6c6f))])])
--- result
(con bytestring #68656c6c6f)
--- logs
["once"]
